[package]
name = "teste-1cpu-1gbram"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
