[package]
name = "teste-1cpu-1gbram"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
